# qp-pacbio

./: LICENSE  README.md  README.rst  feature-table-job-submission.py  guidance_install_binning.txt  pyproject.toml  runner.py
.github/workflows/: qiita-plugin-ci.yml
data/templates/: 0.mapping_minimap2_db.sbatch  1.hifiasm-meta_new.sbatch  2.get-circular-genomes.sbatch  2.get-circular-genomes.sh  3.minimap2_assembly.sbatch  4.metawrap_binning_new.sbatch  5.DAS_Tools_prepare_batch3_test.sbatch  6.MAG_rename.sbatch  7.checkm_batch.sbatch  finish.pacbio.processing.sbatch  woltka_minimap2.sbatch  woltka_minimap2_merge.sbatch
qp_pacbio/: __init__.py  qp_pacbio.py  scripts.py  util.py
qp_pacbio/data/: resources.yaml
qp_pacbio/data/adapters/: twist_adapters_231010.fasta.gz.md5
qp_pacbio/data/sql/: sam-filter.sql
qp_pacbio/data/templates/: 1.hifiasm-meta_new.sbatch  2.get-circular-genomes.sbatch  3.minimap2_assembly.sbatch  4.metawrap_binning_new.sbatch  5.DAS_Tools_prepare_batch3_test.sbatch  6.MAG_rename.sbatch  7.checkm_batch.sbatch  8.lingenome_withmd.py  feature_table_finish.sbatch  feature_table_merge.sbatch  feature_table_remap.sbatch  finish.pacbio.processing.sbatch  pacbio_adapter.sbatch  pacbio_adapter_finish.sbatch  syndna.sbatch  syndna_finish.sbatch  woltka_minimap2.sbatch  woltka_minimap2.sql  woltka_minimap2_merge.sbatch
qp_pacbio/tests/: __init__.py  test_pacbio.py
qp_pacbio/tests/support_files/: summary.html
scripts/: configure_qp_pacbio  start_qp_pacbio
