[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["qp_klp", "sequence_processing_pipeline"]

[tool.poetry]
packages = [
    { include = "src/qp_klp", from = "./", to = "qp_klp" },
    { include = "src/sequence_processing_pipeline", from = "./", to = "sequence_processing_pipeline" },
]

[project]
name = "qp_pacbio"
# version strings must comply with PEP 440:
# https://peps.python.org/pep-0440/
version = "2025.9"
authors = [{ name = "Qiita Development Team", email = "qiita.help@gmail.com" }]
description = "Qiita Plugin: PacBio Processing"
readme = "README.rst"
# ">=" required as most available versions of 3.9 will be "3.9.17" or
# similar.
requires-python = ">=3.11"
keywords = ["bioinformatics", "qiita", "pacbio"]
license = { text = "BSD" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "nose>=0.10.1",
    "click>=3.3",
    "pandas",
    'requests',
    'flake8',
    'nose',
    'coverage',
    'numpy',
    "qiita-files@https://github.com/qiita-spots/qiita-files/archive/master.zip",
    "qiita_client@https://github.com/qiita-spots/qiita_client/archive/master.zip",
]
[project.scripts]
configure_klp = "qp_pacbio.scripts.configure_qp_pacbio:config"
start_klp = "qp_pacbio.scripts.start_qp_pacbio:execute"
